feat: SRP refactoring