@@ -3,14 +3,22 @@ package com.astrobookings.business;
 import java.time.LocalDateTime;
 import java.util.List;
 
+import com.astrobookings.business.exception.NotFoundException;
+import com.astrobookings.business.exception.ValidationException;
+import com.astrobookings.business.models.CreateFlightCommand;
 import com.astrobookings.persistence.FlightRepository;
 import com.astrobookings.persistence.RocketRepository;
 import com.astrobookings.persistence.models.Flight;
 import com.astrobookings.persistence.models.FlightStatus;
+import com.astrobookings.persistence.models.Rocket;
 
 public class FlightService {
   private final FlightRepository flightRepository;
   private final RocketRepository rocketRepository;
+
+  public FlightService() {
+    this(new FlightRepository(), new RocketRepository());
+  }
 
   public FlightService(FlightRepository flightRepository, RocketRepository rocketRepository) {
     this.flightRepository = flightRepository;
@@ -25,48 +33,46 @@ public class FlightService {
     }
   }
 
-  public Flight createFlight(Flight flight) {
-    // Set defaults
+  public Flight createFlight(CreateFlightCommand command) {
+    Flight flight = new Flight();
+    flight.setRocketId(command.rocketId());
+    flight.setDepartureDate(command.departureDate());
+    flight.setBasePrice(command.basePrice());
     flight.setStatus(FlightStatus.SCHEDULED);
-    flight.setMinPassengers(5);
+    flight.setMinPassengers(command.minPassengers() == null ? 5 : command.minPassengers());
 
-    // Validate
-    String error = validateFlight(flight);
-    if (error != null) {
-      throw new IllegalArgumentException(error);
-    }
+    validateFlight(flight);
 
-    // Save
     return flightRepository.save(flight);
   }
 
-  private String validateFlight(Flight flight) {
-    // Input structure validations
-    if (flight.getRocketId() == null || flight.getRocketId().trim().isEmpty()) {
-      return "Rocket ID must be provided";
+  private void validateFlight(Flight flight) {
+    if (flight.getRocketId() == null || flight.getRocketId().isBlank()) {
+      throw new ValidationException("Rocket ID must be provided");
     }
     if (flight.getDepartureDate() == null) {
-      return "Departure date must be provided";
+      throw new ValidationException("Departure date must be provided");
     }
     if (flight.getBasePrice() <= 0) {
-      return "Base price must be positive";
+      throw new ValidationException("Base price must be positive");
+    }
+    if (flight.getMinPassengers() <= 0) {
+      throw new ValidationException("Min passengers must be positive");
     }
 
-    // Business validations
-    if (rocketRepository.findAll().stream().noneMatch(r -> r.getId().equals(flight.getRocketId()))) {
-      return "Rocket with id " + flight.getRocketId() + " does not exist";
+    Rocket rocket = rocketRepository.findById(flight.getRocketId());
+    if (rocket == null) {
+      throw new NotFoundException("Rocket with id " + flight.getRocketId() + " does not exist");
     }
 
     LocalDateTime now = LocalDateTime.now();
     if (!flight.getDepartureDate().isAfter(now)) {
-      return "Departure date must be in the future";
+      throw new ValidationException("Departure date must be in the future");
     }
 
     LocalDateTime oneYearAhead = now.plusYears(1);
     if (flight.getDepartureDate().isAfter(oneYearAhead)) {
-      return "Departure date cannot be more than 1 year ahead";
+      throw new ValidationException("Departure date cannot be more than 1 year ahead");
     }
-
-    return null;
   }
 }
